# Lexibrary

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  claude-overview.md  gemini-overview.md  i-was-here.md  lexibrary-overview.md  pyproject.toml
.beads/: metadata.json
baml_src/: archivist_design_file.baml  archivist_start_here.baml  clients.baml  generators.baml  summarize_directory.baml  summarize_file.baml  summarize_files_batch.baml  types.baml
blueprints/: BLUEPRINT_INSTRUCTIONS.md  HANDOFF.md  START_HERE.md  baml_src.md
memory/: MEMORY.md
openspec/: config.yaml
plans/: phase-2-directory-indexes.md  phase-3-ast-parser.md  phase-6-the-stack.md  phase-7-validation-and-status.md  phase-9-update-triggers.md  v2-master-plan.md
plans/archive/: phase-4-archivist.md  phase-5-concepts-wiki.md  phase-8a-cli-split.md  phase-8b-init-wizard.md  phase-8c-agent-rules-iwh.md
src/lexibrarian/: __init__.py  __main__.py  cli.py  exceptions.py  search.py
tests/: test_cli.py
tests/test_archivist/: test_change_checker.py  test_dependency_extractor.py  test_pipeline.py  test_pipeline_safety.py  test_service.py  test_start_here.py
tests/test_artifacts/: test_aindex_parser.py  test_aindex_roundtrip.py  test_aindex_serializer.py  test_design_file_parser.py  test_design_file_roundtrip.py  test_design_file_serializer.py  test_models.py  test_writer.py
tests/test_ast_parser/: __init__.py  test_hash_interface.py  test_javascript_parser.py  test_models.py  test_python_parser.py  test_registry.py  test_skeleton_render.py  test_typescript_parser.py
tests/test_cli/: test_lexi.py  test_lexictl.py
tests/test_config/: test_defaults.py  test_loader.py  test_schema.py
tests/test_crawler/: test_change_detector.py  test_discovery.py  test_engine.py  test_file_reader.py
tests/test_daemon/: test_debouncer.py  test_logging.py  test_scheduler.py  test_service.py  test_service_rewrite.py  test_watcher.py
tests/test_hooks/: test_post_commit.py
tests/test_ignore/: test_matcher.py
tests/test_indexer/: __init__.py  test_generator.py  test_orchestrator.py  test_parser.py  (+2 more)
(+552 files in other folders)
