[project]
name = "lexibrary"
version = "0.1.0"
description = "AI-friendly codebase indexer — creates .aindex files for LLM context navigation"
authors = [{ name = "Shann Gray" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # -- Phase 1: Foundation --
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "pathspec>=1.0.0,<2.0.0",
    # -- Token counting backends --
    "tiktoken>=0.9.0",
    "anthropic>=0.42.0",
    # -- Phase 4: LLM integration --
    "baml-py>=0.218.0,<0.219.0",
    # -- Phase 7: Daemon --
    "watchdog>=6.0.0,<7.0.0",
    # -- Config (YAML) --
    "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.11.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
]
# Phase 4: uncomment and pin when implementing LLM integration
# ollama = ["ollama>=0.6.0"]

[project.scripts]
lexi = "lexibrarian.cli:app"
lexibrarian = "lexibrarian.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexibrarian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "lexibrarian.baml_client.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "baml_py.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/lexibrarian/baml_client/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "openai>=2.20.0",
    "python-dotenv>=1.2.1",
    "types-pyyaml>=6.0.12.20250915",
]
